--- a/config/robot_list.yml
+++ b/config/robot_list.yml
@@ -1,17 +1,303 @@
 
+
+
+robot0:
+- admin0
+- test0
 robot1:
-  - 1455080341
-  - 990223
-
+- admin1
+- test1
 robot2:
-  - 12354516
-  - adb
-
-
+- admin2
+- test2
 robot3:
-  - mjx
-  - 123456
-
+- admin3
+- test3
 robot4:
-  - lol
-  - 654321
+- admin4
+- test4
+robot5:
+- admin5
+- test5
+robot6:
+- admin6
+- test6
+robot7:
+- admin7
+- test7
+robot8:
+- admin8
+- test8
+robot9:
+- admin9
+- test9
+robot10:
+- admin10
+- test10
+robot11:
+- admin11
+- test11
+robot12:
+- admin12
+- test12
+robot13:
+- admin13
+- test13
+robot14:
+- admin14
+- test14
+robot15:
+- admin15
+- test15
+robot16:
+- admin16
+- test16
+robot17:
+- admin17
+- test17
+robot18:
+- admin18
+- test18
+robot19:
+- admin19
+- test19
+robot20:
+- admin20
+- test20
+robot21:
+- admin21
+- test21
+robot22:
+- admin22
+- test22
+robot23:
+- admin23
+- test23
+robot24:
+- admin24
+- test24
+robot25:
+- admin25
+- test25
+robot26:
+- admin26
+- test26
+robot27:
+- admin27
+- test27
+robot28:
+- admin28
+- test28
+robot29:
+- admin29
+- test29
+robot30:
+- admin30
+- test30
+robot31:
+- admin31
+- test31
+robot32:
+- admin32
+- test32
+robot33:
+- admin33
+- test33
+robot34:
+- admin34
+- test34
+robot35:
+- admin35
+- test35
+robot36:
+- admin36
+- test36
+robot37:
+- admin37
+- test37
+robot38:
+- admin38
+- test38
+robot39:
+- admin39
+- test39
+robot40:
+- admin40
+- test40
+robot41:
+- admin41
+- test41
+robot42:
+- admin42
+- test42
+robot43:
+- admin43
+- test43
+robot44:
+- admin44
+- test44
+robot45:
+- admin45
+- test45
+robot46:
+- admin46
+- test46
+robot47:
+- admin47
+- test47
+robot48:
+- admin48
+- test48
+robot49:
+- admin49
+- test49
+robot50:
+- admin50
+- test50
+robot51:
+- admin51
+- test51
+robot52:
+- admin52
+- test52
+robot53:
+- admin53
+- test53
+robot54:
+- admin54
+- test54
+robot55:
+- admin55
+- test55
+robot56:
+- admin56
+- test56
+robot57:
+- admin57
+- test57
+robot58:
+- admin58
+- test58
+robot59:
+- admin59
+- test59
+robot60:
+- admin60
+- test60
+robot61:
+- admin61
+- test61
+robot62:
+- admin62
+- test62
+robot63:
+- admin63
+- test63
+robot64:
+- admin64
+- test64
+robot65:
+- admin65
+- test65
+robot66:
+- admin66
+- test66
+robot67:
+- admin67
+- test67
+robot68:
+- admin68
+- test68
+robot69:
+- admin69
+- test69
+robot70:
+- admin70
+- test70
+robot71:
+- admin71
+- test71
+robot72:
+- admin72
+- test72
+robot73:
+- admin73
+- test73
+robot74:
+- admin74
+- test74
+robot75:
+- admin75
+- test75
+robot76:
+- admin76
+- test76
+robot77:
+- admin77
+- test77
+robot78:
+- admin78
+- test78
+robot79:
+- admin79
+- test79
+robot80:
+- admin80
+- test80
+robot81:
+- admin81
+- test81
+robot82:
+- admin82
+- test82
+robot83:
+- admin83
+- test83
+robot84:
+- admin84
+- test84
+robot85:
+- admin85
+- test85
+robot86:
+- admin86
+- test86
+robot87:
+- admin87
+- test87
+robot88:
+- admin88
+- test88
+robot89:
+- admin89
+- test89
+robot90:
+- admin90
+- test90
+robot91:
+- admin91
+- test91
+robot92:
+- admin92
+- test92
+robot93:
+- admin93
+- test93
+robot94:
+- admin94
+- test94
+robot95:
+- admin95
+- test95
+robot96:
+- admin96
+- test96
+robot97:
+- admin97
+- test97
+robot98:
+- admin98
+- test98
+robot99:
+- admin99
+- test99
